--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "jquery": "^3.7.1",
+    "keycloak-js": "^23.0.1",
+    "keycloak-react-web": "^0.1.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
